sprint 2 has been modified...

--- a/Project Development Phase/Sprint 2/templates/login.html
+++ b/Project Development Phase/Sprint 2/templates/login.html
@@ -1,46 +1,68 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>Login</title>
-  </head> 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <body style="background-color:#B2D3C2">
-        <div class="container mt-3">
-            <h1 style="color: black; text-align: center;">
-                Personal Expense Tracker <img src="bank.png" style="width:50px;height: 50px;">
-            </h1>
-            <div class="container mt-5" style="width: 600px;">
-              <h4>{{ msg }}</h4>
-                    <div class="card shadow-lg bg-white rounded">
-                        <div class="card-header" style="text-align: center;">
-                          <h4>Login</h4>
-                        </div>
-                        <div class="card-body">
-                          <form action="/login" method="POST">
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Email: </label>
-                                <input type="email" class="form-control" name="email" id="email" placeholder="abc@gmail.com">
-                              </div>
-                              <div class="mb-3">
-                                <label for="passowrd" class="form-label">Password: </label>
-                                <input type="password" class="form-control" name="password" id="password"></input>
-                              </div>
-                              <button type="submit" style="background-color:#00AD83; border-color:#00AD83; border-radius:5px;">Login</button>
-                          </form>
-                        </div>
-                        <div class="card-footer text-muted" style="text-align:center">
-                          New user? <span><a href="registration.html">Register Here</a></span>
-                        </div>
-                      </div>
-            </div>
-        </div>    
-  </body>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Animated Login Form</title>
+	<link rel="stylesheet" type="text/css" href="..\static\css\login.css">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body >
+	<img class="wave" src="..\static\images\wave.png">
+	<div class="container">
+		
+		<div class="img">
+			<div id="png"><a href="/" title="HOME"><img style="width:75px; height:75px ; " src="..\static\images\home-page.png"></a></div>
+			<img src="..\static\images\bg.svg">
+		</div>
+		
+		
+		<div class="login-content">
+			
+			<form action='/login' method="POST">
+				<div class="msg">{{ msg }}</div>
+				<img src="..\static\images\avatar.svg">
+				<h2 class="title">Welcome</h2>
+           		<div class="input-div one">
+           		   <div class="i">
+           		   		<i class="fas fa-user"></i>
+           		   </div>
+           		   <div class="div">
+           		   		<h5>Username</h5>
+           		   		<input type="text" name="username" class="input" required>
+           		   </div>
+           		</div>
+           		<div class="input-div pass">
+           		   <div class="i"> 
+           		    	<i class="fas fa-lock"></i>
+           		   </div>
+           		   <div class="div">
+           		    	<h5>Password</h5>
+           		    	<input type="password"  name="password" class="input" required>
+            	   </div>
+            	</div>
+            	<a href="#">Forgot Password?</a>
+            	<input type="submit" class="btn" value="Login">
+				<span>OR</span>
+				
+				<div><b>Login with</b></div>
+				<div>
+					<ul>
+						<li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
+						<li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+						<li><a href="#"><i <i class="fab fa-google"  aria-hidden="true"></i></a></li>
+						<li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+						<li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+					</ul>
+					
+				</div> 
+				<div class="app" ><b>Don't have an account?</b><a id="app1" href="\signup">REGISTER.here</a></div>
+            </form>
+			
+        </div>
+		
+    </div>
+	
+    <script type="text/javascript" src="..\static\js\login.js"></script>
+</body>
 </html>
